// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders author and source name 1`] = `
<div>
  <small
    class="text-right flex flex-col md:flex-row gap-1"
  >
    <span>
       by Jandsu Silva
    </span>
    <span>
       at Uai News
    </span>
  </small>
</div>
`;

exports[`renders author without source name 1`] = `
<div>
  <small
    class="text-right flex flex-col md:flex-row gap-1"
  >
    <span>
       by Jandsu Silva
    </span>
    <span />
  </small>
</div>
`;
